added lines to pom